# eegmanysteps_oddball

./: EEGManySteps_oddball.exp  EEGManySteps_oddball.sce  EEGManySteps_oddball_20250325165336.ppk  EEGManySteps_oddball_20260318135417.ppk  LICENSE  README.md  oddball_trigger_description.txt  pyproject.toml  stim.lst
oddball/: oddball.py
