[tool.poetry]
name = "psychopy-auditoryOddball"
version = "1.0.0"
description = "An auditory Oddball experiment using PsychoPy"
authors = ["Julius Welzel <j.welzel@neurologie.uni-kiel.de>"]

[tool.poetry.dependencies]
python = "^3.8"
psychopy = "^2021.2.3"
numpy = "^1.21.0"
pylsl = "^1.14.0"
pywin32 = "^301"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"